# pdfpipe-libraries

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
mcp/: .npmignore  Dockerfile  README.md  package-lock.json  package.json  test-client.mjs  tsconfig.json
mcp/src/: index.ts
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/src/: index.ts
sdk-python/: README.md  pyproject.toml
sdk-python/src/pdfpipe/: __init__.py  client.py
